# pii-cleaner

./: .gitignore  Makefile  README.md  pyproject.toml
.github/prompts/: commit-message.prompt.md  commit.prompt.md
examples/: advanced_config.yaml  config.yaml
pii_cleaner/: __init__.py  cli.py  config.py
pii_cleaner/detectors/: custom.py  financial.py
pii_cleaner/processors/: csv_processor.py  pdf_processor.py
pii_cleaner/redactors/: base.py  financial_redactor.py  text_redactor.py
pii_cleaner/reporters/: run_reporter.py
pii_cleaner/utils/: file_utils.py  hashing.py
tests/: test_cli.py  test_config.py  test_csv_processor.py  test_financial_masking.py  test_folder_processing.py  test_pdf_processor.py
tests/fixtures/: sample.csv  sample_config.yaml
